<resources>
    <string name="app_name">GetConnected</string>
    <string name="loading">Loading…</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
    <string name="current_location">Current location</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="error_connection_failed">Could not connect to the server</string>
    <string name="error_unknown_exception">An unknown exception occurred</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="font_scaling">Choose font scaling</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="language_picker">Choose language</string>
    <string name="main_text">Navigate to one of the following pages by pressing the button.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="home_button_transport">Transport</string>
    <string name="home_button_map">Map</string>
    <string name="home_button_marktetplace">Marketplace</string>
    <string name="home_button_support">Customer Support</string>
    <string name="home_button_help">Help</string>
    <string name="home_button_settings">Settings</string>
    <string name="title_activity_transport">Transport</string>
    <string name="title_activity_transport1">Transport</string>
    <string name="transport_text_from">From</string>
    <string name="transport_text_to">To</string>
    <string name="transport_text_departure">Departure</string>
    <string name="transport_text_arrival">Arrival</string>
    <string name="transport_text_date">Date</string>
    <string name="transport_text_time">Time</string>
    <string name="transport_text_possibilities">I would like to use the following transportation options:</string>
    <string name="transport_text_possibilities_bus">Bus</string>
    <string name="transport_text_possibilities_train">Train</string>
    <string name="transport_text_possibilities_taxi_other">Taxi / other</string>
    <string name="transport_input_from">Location..</string>
    <string name="transport_input_to">Location..</string>
    <string name="transport_input_time">Choose Time</string>
    <string name="transport_input_date">Choose Date</string>
    <string name="transport_button_ok">OK</string>
    <string name="title_activity_transport_result">Travel Information</string>
    <string name="transport_result_text_departure">Departure</string>
    <string name="transport_result_text_traveltime">Travel Time</string>
    <string name="transport_result_text_switch">Switch</string>
    <string name="transport_result_text_arrival">Arrival</string>
    <string name="transport_text_empty">Some field are empty..</string>
     <string name="noTransportSelected">You have not selected a method of transportation</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_help_basic">Basic instructions</string>
    <string name="title_activity_help_map">Use of map</string>
    <string name="title_activity_help_plan">Plan your ride</string>
    <string name="help_intro">Click on one of the subjects below for additional explanation.</string>
    <string name="help_button_basic">Basic instructions</string>
    <string name="help_button_map">Explanation of map use</string>
    <string name="help_button_plan">Plan your ride</string>
    <string name="help_button_marketplace">Use the marketplace</string>
    <string name="help_button_contact">Contact</string>
    <string name="help_map">If you would like to use the map, press the 
        “Map” button in de main menu or the quick menu. 
        A street map will appear with a small yellow icon 
        that looks like a little man. This icon represents 
        your current location.\n\n
        
		A number of green icons will also appear on the map. 
		These icons show where the bus stops are found in the area. 
		If the green icons don’t appear immediately, wait for a couple of seconds. 
		They will appear eventually.\n\n
 
		If you tap on one of the bus stops, you will be directed to another page. 
		This page shows more details about the bus stop. 
		If you would like to return to the map, just press the “Back” button.</string>
	<string name="help_plan">
	    In order to plan a trip, press the “Transport” button either in the main menu, or in the quick menu.
	    This will bring up the page that allows you to select the means of transportation. When you’re
	    satisfied with your choice, press the “Next” button.\n\n
	    
	    On the page that appears, you will be able to select the location you’d like to travel from, the
	    location you’d like to travel to, the date on which you’d like to travel, and the time you either want
	    to leave or arrive. When everything is set to your likings, press the “Ok” button.\n\n
	    
	    A list of suggested travel routes is presented on the page that follows. Press on the travel route that
	    fits your needs most, to see more information about this travel route.
	</string>
    <string name="help_basic_home_button_title">Home button</string>
    <string name="help_basic_home_button_text">The Home button is situated in the upper right corner of the screen. If this button is pressed the application will rederect you to the starting screen of the application.</string>
    <string name="help_basic_quick_menu_title">Quick menu</string>
    <string name="help_basic_quick_menu_text_1">The quick menu is situated in the lower center of the screen. This menu is globaly available in the application accept on the starting screen of the application.</string>
    <string name="help_basic_quick_menu_text_2">If this button is pressed a menu appears with a set of buttons. These buttons can be used to navigate quickly through the application.</string>
    <string name="header_button_home">Home</string>
    <string name="footer_button_back">Back</string>
    <string name="footer_button_menu_open">Open Menu</string>
    <string name="footer_button_menu_close">Close Menu</string>
    <string name="footer_button_ok">OK</string>
    <string name="title_activity_bus_stop_details">Bussstop</string>
    <string name="busstop_text_name">Name</string>
    <string name="busstop_text_number">Number</string>
    <string name="busstop_text_shelter">Shelter:</string>
    <string name="busstop_text_trunk">Trunk:</string>
    <string name="busstop_text_lights">Lights:</string>
    <string name="busstop_text_seating">Seating:</string>
    <string name="busstop_text_bicycle_parking">Bicycle parking:</string>
    <string name="busstop_text_facilities">Facilities:</string>
    <string name="field_validation_no_input">The field can not be empty</string>
    <string name="field_validation_same_input">The fields cannot be the same</string>
    <string name="field_validation_unknown_location">Unknown location(s)</string>
    <string name="field_validation_too_short">The number of characters are too few</string>
    <string name="field_validation_too_long">The number of characters are too many</string>
    <string name="field_validation_number">The field can not contain letters</string>
    <string name="field_validation_string">The field can not contain numbers</string>
    <string name="field_validation_not_numeric">The field can only contain numbers</string>
    <string name="field_validation_not_alphanumeric">The field can only contain letters and numbers</string>
    <string name="field_validation_not_an_email">The field must contain a valid e-mail address</string>
    <string name="transportation_result_departure_header">Departure</string>
    <string name="transportation_result_duration_header">Duration</string>
    <string name="transportation_result_arrival_header">Arrival</string>
    <string name="transportation_result_transfers_header">Transfers</string>
    <string name="transportation_result_pref">Previous</string>
    <string name="transportation_result_next">Next</string>
    <string name="transportation_result_no_result">No results found</string>
    <string name="title_activity_transport_details">TransportDetailsActivity</string>
    <string name="transport_details_pref">Previous</string>
    <string name="transport_details_next">Next</string>
    <string name="transport_details_walk_title">Walk</string>
    <string name="transport_details_bus_title">Bus</string>
    <string name="transport_details_train_title">Train</string>
    <string name="transport_detail_taxi">Taxi</string>
    <string name="region_taxi_north_groningen">Region North Groningen</string>
    <string name="region_taxi_east_groningen">Region East Groningen</string>
    <string name="region_taxi_southwest_groningen">Region Southwest Groningen</string>
    <string name="region_taxi_north_drenthe">Region North Drenthe</string>
    <string name="region_taxi_southeast_drenthe">Region Southeast Drenthe</string>
    <string name="region_taxi_southwest_drenthe">Region Southwest Drenthe</string>
    <string name="region_taxi_call">Call</string>
    <string name="title_activity_location_selector">Select location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_taxi_list">TaxiList</string>
     <string name="walkGuy">A stickpage guy to indicate walking</string>
    <string name="title_activity_marketplace">Marketplace</string>
    <string name="request_ride">Request a ride</string>
    <string name="create_ride">Create new ride</string>
    <string name="display_offered_rides">Display offered rides</string>
    <string name="display_unrated_rides">Display unrated rides</string>
    <string name="title_activity_createride">Create ride</string>
    <string name="title_activity_requestride">Request ride</string>
    <string name="location_from">From</string>
    <string name="location_destination">Destination</string>
    <string name="time">Time</string>
    <string name="request_ride_button">Request this ride</string>
    <string name="create_ride_button">Create this ride</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="locations">Locations</string>
    <string name="field_validation_input_required">Please fill in all required fields.</string>
    <string name="create_ride_succes">Your ride has been created</string>
	<string name="create_ride_fail">The ride couldn\'t be created, try again later</string>
    <string name="title_activity_offered_rides">Offered rides</string>
    <string name="date">Date</string>
    <string name="change_date">Change date</string>
    <string name="offered_rides_more_info">More</string>
    <string name="login_incorrect_credentials">Username or password is incorrect</string>
    <string name="title_activity_registeractivity">Register</string>
    <string name="title_activity_loginactivity">Login</string>
    <string name="field_username">Username</string>
    <string name="field_password">Password</string>
    <string name="field_first_name">First Name</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_gender">Gender</string>
    <string name="field_gender_male">Male</string>
    <string name="field_gender_female">Female</string>
    <string name="rate_ride_rating">Rating</string>
    <string name="rate_ride_good">Good</string>
    <string name="rate_ride_bad">Bad</string>
    <string name="rate_ride_button_ok">OK</string>
    <string name="rate_ride_button_cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email address</string>
    <string name="complaint">Complaint or question</string>
    <string name="send">Send</string>
    <string name="transport_company">Select a transport company</string>
</resources>