<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".TransportActivity2" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map_text_location"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/transport_input_from"
        android:layout_marginLeft="10dp"
        android:text="@string/transport_text_to"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/transport_input_to"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/transport_input_from"
        android:ems="10"
        android:hint="@string/transport_input_to"
        android:inputType="textPostalAddress"
        android:text="@string/current_location"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/map_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="21dp"
        android:text="@string/transport_text_from"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/transport_input_from"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/map_text_location"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/transport_input_from"
        android:inputType="textPostalAddress"
        android:text="@string/current_location"
        android:textSize="12sp" >
    </EditText>

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/transport_input_date"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/transport_text_date"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/transport_input_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/transport_input_to"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/transport_input_date"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/transport_input_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/transport_input_date"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/transport_input_time"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/transport_input_time"
        android:layout_alignLeft="@+id/TextView04"
        android:text="@string/transport_text_time"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/transport_radio_departure_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/transport_radio_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/transport_text_departure"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/transport_radio_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:text="@string/transport_text_arrival"
            android:textSize="12sp" />
    </RadioGroup>

    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/footer" />

</RelativeLayout>